tests/core/uncategorized/test_error_formatting_data/fixtures/test_during_load_via_dep.golden.stderr
# This file is @generated, regenerate by re-running test with `-- --env BUCK2_UPDATE_GOLDEN=1` appended to the test command

BUILD FAILED
Error running analysis for `root//during_load/via_dep:via_dep (<unspecified>)`

Caused by:
    0: Error in configured node dependency, dependency chain follows (-> indicates depends on, ^ indicates same configuration as previous):
              root//during_load/via_dep:via_dep (<unspecified>)
           -> root//during_load:get (^)
       
    1: looking up unconfigured target node `root//during_load:get`
    2: Error loading targets in package `root//during_load` for target `root//during_load:get`
    3: Error evaluating build file: `root//during_load:TARGETS.fixture`
    4: Traceback (most recent call last):
         * during_load/TARGETS.fixture:3, in <module>
             get([1, 2, 3])
       error: Index `5` is out of bound
        --> during_load/access.bzl:9:12
         |
       9 |     return ls[5]
         |            ^^^^^
         |
       
